@@ -195,9 +195,9 @@ static const char *def_menu_main_clipboard[] =
     "clipboard_middle",
     "clipboard_arrows",
 #endif
-#if defined(WIN32)
     "--",
     "clipboard_device",
+#if defined(WIN32)
     "clipboard_dosapi",
 #endif
 #if defined(WIN32) || defined(C_SDL2)
